app/styles/_comments.sass
span.comments_count
  padding: 1px 5px
  text-transform: uppercase
  font-size: 11px
  +rounded(4px)
  color: rgb(255, 255, 255)
  background: rgb(170, 170, 170)

#column
  span.comments_count
    padding: 0
    display: inline-block
    width: 16px
    text-align: center

form.new_comment, form.edit_comment
  padding-bottom: 3px
  margin-bottom: 30px
  .micro_avatar
    +rounded(3px)
    position: absolute
    top: 1px
    left: 0
  .field
    position: relative
    margin: 3px 0 6px
    label
      font-weight: normal !important
    .textarea
      display: block
      margin-left: 38px
      margin-bottom: 0px
    textarea
      width: 95%
      display: block
      font-size: 13px
      height: 1.4em
      color: black
      #facebox &
        width: 575px
  .text_field.hours_field
    font-size: 12px
    label
      display: inline
    input
      width: 5em
      font-size: 14px
      padding: 2px 4px
      margin-right: 1em
  .actions
    display: inline-block
    span
      font-size: 12px
      margin-right: 5px
    .add_hours_icon, .attach_icon
      text-indent: -9999em
      margin-right: 5px
      top: 2px
      *:first-child+html &
        text-indent: 16px
        overflow: hidden
        top: -2px
    *:first-child+html & .attach_icon
      margin-left: -16px
    .task_actions
      display: inline
      label
        display: none
      select[name="task[status]"]
        width: 80px
      select[name="task[assigned_id]"]
        width: 130px
    div.attach
      display: inline
    div.convert_to_task
      top: 8px
      width: 600px
      .fields
        display: block
        margin: 5px 0
      label
        display: inline-block
        text-align: right
        width: 160px
        margin-right: 10px
      input[type=text]
        border: 1px solid #bbb
        padding: 4px
      select
        margin: 0 5px 0 0
      span.localized_date
        margin-left: 180px
    span.convert_to_task a
      margin-left: 45px
      font-size: 12px
      font-style: normal
      color: #666
      text-decoration: none
      border-bottom: 1px dashed #CCC
      &:hover
        border-bottom: 1px solid #CCC
    .conversation_actions
      display: inline
      label
        font-size: 12px
        display: none
      label.display
        display: inline
      select[name="conversation[status]"]
        width: 80px
      select[name="conversation[assigned_id]"]
        width: 130px
    .date_picker
      display: inline-block
      img
        display: none
      span
        margin-left: 10px
  .submit
    float: right
    display: inline-block
    text-align: right
    width: auto
  .project_select
    font-size: 13px
  .extra
    +clearing
  .error
    color: firebrick

form .upload_area
  padding: .3em 0
  p
    margin: 0 0 .5em 0
    color: $text !important
  input[type=file]
    display: block
    margin-bottom: .7em

.thread
  form.edit_comment
    .body
      textarea
        width: 538px

.comment
  padding: 5px 0
  min-height: 24px
  position: relative
  border:
    bottom: 2px solid white
  p.actions
    visibility: hidden
    position: relative
    margin: 0px
    float: right
    span
      margin-left: -44px
      overflow: auto
      position: absolute
      width: 38px
      height: 40px
      text-align: right
  .info
    position: absolute
    top: 5px
    left: 5px
    .micro_avatar
      +rounded(3px)
  span.hours
    font-size: 11px
    font-weight: bold
    color: white
    text-align: center
    background-color: $navbar
    +rounded(3px)
    padding: 0 3px
    white-space: nowrap
    img
      margin-top: 6px
  span.arr
    color: rgb(140, 140, 140)
  .block
    padding-left: 45px
    margin-top: 0
    margin-right: 5px
    .date
      float: right
      font-size: 10px
      color: #9da3a7
    .body
      .before
        display: inline
      a.user, a.project
        text-decoration: none
        font-weight: bold
      .before:first-child+p
        display: inline
      p
        margin: 8px 0
  .mention
    padding: 0 3px
    background-color: #eee
    border: 1px solid #ccc
    +rounded(3px 3px)
    text-decoration: none
    color: #000
  a.mention
    &:hover
      color: $navbar

.youtube-player
  margin: 20px 0
.comment-image
  max-height: 480px
  max-width: 385px

